Fixed number of layout issues with EditProspect view

--- a/src/app/prospects/edit-prospect/edit-prospect.component.css
+++ b/src/app/prospects/edit-prospect/edit-prospect.component.css
@@ -102,6 +102,14 @@
 .editIconStyle:hover{
   cursor: pointer;
 }
+.nonEditIconStyle {
+  width: 20px;
+  height: auto;
+  vertical-align: middle;
+}
+.nonEditIconStyle:hover{
+cursor: pointer;
+}
 fieldset {
   border: 1px ridge rgb(221, 209, 209);
 }
