--- a/src/app/prospects/prospects.component.css
+++ b/src/app/prospects/prospects.component.css
@@ -66,3 +66,8 @@ th{
   color: cadetblue;
   width: 100px !important;
 }
+.my-editclass .mat-dialog-container{
+  width :'600px';
+  height: '500px';
+  overflow: hidden;
+}
