--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-size:14px !important;
 }
 /*@import '../../node_modules/@syncfusion/ej2/material.css';*/
+
+.cdk-global-scrollblock {
+    position: static;
+    overflow: hidden !important;
+}
